--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@
 layout: home
 author_profile: true
 ---
+
+<div id="rasa-chat-widget" data-websocket-url="https://rasa.devopswithbrian.com/"></div>
+
+<script src="https://unpkg.com/@rasahq/rasa-chat" type="application/javascript"></script>
