feat(chatbot): updating chatbot avatar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@ layout: home
 author_profile: true
 ---
 
-<div id="rasa-chat-widget" data-websocket-url="https://rasa.devopswithbrian.com/"></div>
+<div id="rasa-chat-widget" data-websocket-url="https://rasa.devopswithbrian.com/" data-avatar-url="https://avatars.githubusercontent.com/u/115162917?s=200&v=4"></div>
 
 <script src="https://unpkg.com/@rasahq/rasa-chat" type="application/javascript"></script>
