--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@ layout: home
 author_profile: true
 ---
 
-<div id="rasa-chat-widget" data-websocket-url="https://rasa.devopswithbrian.com/" data-avatar-url="https://avatars.githubusercontent.com/u/115162917?s=200&v=4"></div>
+<div
+    id="rasa-chat-widget"
+    data-avatar-background="rgba(255, 255, 255, 0)"
+    data-avatar-url="https://avatars.githubusercontent.com/u/115162917?s=200&v=4"
+    data-root-element-id="storybook-preview-wrapper"
+    data-websocket-url="https://rasa.devopswithbrian.com/"
+    id="rasa-chat-widget"
+></div>
 
 <script src="https://unpkg.com/@rasahq/rasa-chat" type="application/javascript"></script>
