fix(google-analytics): adding in google analytics

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 layout: home
 author_profile: true
 ---
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LLPRJVGS02"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LLPRJVGS02');
+</script>
 
 <div
     id="rasa-chat-widget"
