--- a/index.html
+++ b/index.html
@@ -16,3 +16,5 @@ author_profile: true
 ></div>
 
 <script src="https://unpkg.com/@rasahq/rasa-chat" type="application/javascript"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2056826061150993"
+     crossorigin="anonymous"></script>
