--- a/index.html
+++ b/index.html
@@ -15,3 +15,6 @@ author_profile: true
     id="rasa-chat-widget"
 ></div>
 <script src="https://unpkg.com/@rasahq/rasa-chat" type="application/javascript"></script>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2056826061150993"
+     crossorigin="anonymous"></script>
